update fonction TP2

--- a/TP/TP2/06-NLP-Basics-Assessment.ipynb
+++ b/TP/TP2/06-NLP-Basics-Assessment.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -446,8 +446,7 @@
       "to --> to\n",
       "their --> their\n",
       "base --> base\n",
-      "form. --> form.\n",
-      "running --> run\n"
+      "form. --> form.\n"
      ]
     }
    ],
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +490,8 @@
        " 'of',\n",
        " 'natur',\n",
        " 'languag',\n",
-       " 'processing.',\n",
+       " 'process',\n",
+       " '.',\n",
        " 'it',\n",
        " 'involv',\n",
        " 'reduc',\n",
@@ -499,11 +499,11 @@
        " 'to',\n",
        " 'their',\n",
        " 'base',\n",
-       " 'form.',\n",
-       " 'run']"
+       " 'form',\n",
+       " '.']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
     "\n",
     "def custom_spacy_stemmer(sentence):\n",
     "    doc = nlp(sentence)\n",
-    "    return [stemmer.stem(word).lower() for word in text.split()]\n",
+    "    return [stemmer.stem(token.text).lower() for token in doc]\n",
     "\n",
     "custom_spacy_stemmer(text)"
    ]
