--- a/TP/TP2/06-NLP-Basics-Assessment.ipynb
+++ b/TP/TP2/06-NLP-Basics-Assessment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "into the swift water twenty feet below.  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4835"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "204"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "his back, the wrists bound with a cord.  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        " '.']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "['apple', 'is', 'a', 'major', 'technology', 'company', '.']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        " '.']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        " '.']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
      "text": [
       "Original words: ['Stopwords', 'are', 'common', 'words', 'that', 'are', 'often', 'removed', 'during', 'text', 'preprocessing', '.']\n",
       "Filtered words (without stopwords): ['Stopwords', 'common', 'words', 'removed', 'text', 'preprocessing', '.']\n",
-      "SpaCy Stopwords: {'then', 'twenty', 'using', \"'s\", 'meanwhile', 'done', 'whether', 'ourselves', 'have', 'when', 'than', 'at', 'had', 'both', 'whom', 'empty', 'those', 'do', 'what', 'afterwards', 'too', '‘d', 'due', '’re', 'now', 'thereby', 'below', 'either', 'twelve', '‘m', 'does', 'whereafter', 'itself', \"'m\", 'nowhere', 'against', '’ll', 'everything', 'never', 'them', 'whenever', 'everyone', 'many', 'whence', 'would', 'ten', 'elsewhere', 'eight', 'ever', 'five', 'has', 'already', 'he', 'yourselves', 'thru', 'since', 'six', 'least', 'keep', 'wherein', 'thereafter', 'beside', 'go', 'whole', 'upon', 'been', 'full', 'may', 'everywhere', 'be', 'noone', 'hence', 'cannot', 'four', 'because', 'or', 'often', \"'ll\", 'until', 'within', 'else', 'something', 'say', 'and', 'enough', 'along', 'although', '‘ll', 'besides', 'across', 'anyone', 'indeed', 'himself', 're', 'fifty', 'seemed', 'wherever', 'my', 'therein', 'their', 'some', 'being', 'a', 'latter', 'we', 'less', 'to', 'out', 'sometime', 'sixty', 'yourself', 'no', 'that', 'for', 'put', 'former', 'might', 'take', 'just', 'except', 'without', 'mine', 'forty', 'how', 'your', 'via', 'whatever', 'though', 'among', 'call', 'front', 'nine', 'once', 'whither', 'anyway', 'down', 'onto', 'therefore', 'again', 'still', 'she', 'in', 'used', 'very', 'much', 'towards', 'sometimes', 'fifteen', 'moreover', 'seeming', 'should', 'another', 'through', 'none', 'him', 'made', 'whereby', 'did', 'are', 'always', 'must', 'last', 'make', 'with', 'get', 'above', 'not', 'as', 'doing', 'after', 'nor', 'amount', 'each', 'hereupon', '’s', 'thence', 'about', 'back', 'us', \"n't\", 'alone', 'thus', 'from', 'seem', 'am', 'between', 'whereupon', 'other', 'amongst', 'off', \"'d\", 'perhaps', 'anywhere', 'becoming', 'first', 'hundred', 'before', 'bottom', 'thereupon', 'various', 'became', 'herself', 'per', \"'ve\", 'top', 'was', 'this', 'myself', 'two', 'yours', 'almost', '’m', 'however', 'regarding', 'quite', 'up', 'all', 'they', 'unless', 'whoever', 'anyhow', 'you', 'give', 'latterly', '’ve', 'most', 'become', 'n‘t', 'during', 'yet', 'same', 'otherwise', 'even', 'well', 'serious', 'somewhere', 'next', 'hereby', 'its', 'ours', '‘re', 'others', 'of', 'mostly', 'herein', 'under', 'her', 'neither', 'few', 'whereas', 'such', 'will', 'really', 'themselves', 'one', 'while', 'his', 'by', 'over', 'formerly', 'also', '‘s', 'behind', 'three', 'name', 'anything', 'i', 'who', 'me', 'beyond', 'can', 'the', 'nevertheless', 'move', 'further', 'is', \"'re\", 'someone', 'into', 'n’t', 'any', 'our', 'third', 'if', 'were', 'only', 'every', 'nothing', 'see', 'show', 'hereafter', 'toward', 'could', 'part', 'throughout', 'why', 'whose', 'more', '’d', 'but', 'where', 'nobody', 'together', 'here', 'somehow', 'eleven', 'around', 'own', 'rather', 'so', 'becomes', 'hers', 'it', 'there', 'on', 'side', '‘ve', 'seems', 'namely', 'please', 'which', 'several', 'ca', 'these', 'an', 'beforehand'}\n"
+      "SpaCy Stopwords: {'wherein', 'moreover', 'will', 'though', 'then', 'at', 'we', 'seemed', 'across', \"'re\", 'thereby', 'after', 'below', 'two', 'until', 'show', 'together', 'sometimes', 'side', 'for', 'everywhere', 'onto', 'she', 'herein', 'others', 'still', 'throughout', 'so', 'yet', 'fifteen', 'against', 'sometime', 'too', 'them', 'hundred', 'hereupon', \"n't\", 'call', 'because', 'must', '’d', 'name', 'done', 'really', 'make', 'do', 'anything', 'become', 'if', 'beside', 'there', 'other', \"'d\", 'only', 'otherwise', 'can', 'say', 'itself', 'without', 'either', 'nor', 'three', 'hereby', 'yours', 'me', 'or', 'few', 'mine', 'thereupon', 'had', 'whither', 'anyone', 'myself', 'whom', 'whoever', 'seem', 'beyond', 'n‘t', 'however', 'besides', 'somewhere', 'among', 'amount', 'hers', 'next', 'whereupon', 'give', 'indeed', 'several', 'your', 'being', 'first', 'using', 'than', 'about', 'nobody', 'who', 'this', 'formerly', 'front', 'should', 'both', 'last', 'might', 'yourselves', 'but', 'anywhere', 'of', 'under', 'please', 'is', 'someone', 'enough', 'alone', 'once', 'sixty', 'whereas', 'it', 'above', '‘m', '’re', 'third', 'has', 'were', 'became', 'on', 'upon', 'my', 'although', 'n’t', 'thereafter', 'everything', 'as', 'seeming', 'whether', 'latterly', 'whole', '‘s', 'ours', 'could', 'us', 'five', 'part', 'doing', 'meanwhile', 'and', 'an', '‘d', '‘ll', 'which', 'again', 'least', 'just', 'all', 'while', 'whence', 'have', 'beforehand', 'here', 'where', 'since', 'per', '’m', 'am', 'nevertheless', 'along', 'down', 'keep', 'nine', 'with', 'used', 'does', 'afterwards', 'behind', 'you', 'out', 'else', 'been', 'noone', 'are', 'take', 'to', 'via', 'somehow', 'our', 'themselves', 'wherever', 'made', 'much', 'these', 'well', 'therein', 'may', 'something', 'nothing', 'the', 'within', 'empty', 'mostly', 'get', 'when', 'due', 'perhaps', 'therefore', 'why', 'he', 'seems', 'also', 'between', '’ll', 'always', '‘ve', 'full', 're', '‘re', 'latter', 'anyway', 'amongst', 'that', 'around', 'most', 'none', 'their', 'often', 'see', 'top', 'any', 'ever', 'off', 'various', 'ourselves', 'its', 'elsewhere', 'almost', 'now', 'ten', 'many', 'towards', 'some', 'every', 'regarding', 'one', 'hence', 'move', 'during', 'such', 'fifty', 'never', 'his', 'whose', 'own', 'more', 'over', 'what', 'whenever', 'thru', 'serious', 'her', 'whereby', 'cannot', 'i', 'from', \"'ve\", 'twelve', 'whatever', 'yourself', 'how', 'rather', 'up', 'six', \"'m\", 'eleven', 'another', 'him', 'no', 'anyhow', 'not', 'same', 'himself', 'they', 'in', 'quite', 'further', 'less', 'whereafter', 'put', 'everyone', \"'s\", 'nowhere', 'former', 'unless', 'four', '’ve', 'hereafter', 'eight', 'back', 'very', 'herself', 'go', 'did', 'neither', 'even', 'be', 'becomes', 'into', 'thence', 'those', 'ca', 'each', '’s', 'before', 'by', 'bottom', 'a', 'forty', 'already', 'would', 'through', 'toward', 'was', 'thus', 'becoming', 'namely', 'twenty', 'except', \"'ll\"}\n"
      ]
     }
    ],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "['Stopwords', 'common', 'words', 'removed', 'text', 'preprocessing', '.']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,28 +737,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_text_spacy(text):\n",
-    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "# def preprocess_text_spacy(text):\n",
+    "#     nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "    doc = nlp(text)\n",
+    "#     doc = nlp(text)\n",
     "\n",
-    "    preprocessed_text = [re.sub(r'[^a-zA-Z]', '', token.text.lower()) for token in doc if not token.is_stop]\n",
+    "#     preprocessed_text = [re.sub(r'[^a-zA-Z]', '', token.text.lower()) for token in doc if not token.is_stop]\n",
     "\n",
-    "    return ' '.join(preprocessed_text)"
+    "#     return ' '.join(preprocessed_text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_text_spacy(text):\n",
+    "    doc = nlp(text)\n",
+    "\n",
+    "    preprocessed_tokens = [token.lemma_.lower() for token in doc if not token.is_stop and token.is_alpha]\n",
+    "\n",
+    "    preprocessed_text = ' '.join(preprocessed_tokens)\n",
+    "\n",
+    "    return preprocessed_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hello  know natural language processing fascinating field   '"
+       "'hello know natural language processing fascinating field'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,13 +785,6 @@
     "\n",
     "preprocess_text_spacy(raw_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
