update readme & move into folder

--- a/CM/CM4/02-Text-Classification-Project.ipynb
+++ b/CM/CM4/02-Text-Classification-Project.ipynb
@@ -104,7 +104,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/TextFiles/moviereviews.tsv', sep='\\t')\n",
+    "df = pd.read_csv('../../data/TextFiles/moviereviews.tsv', sep='\\t')\n",
     "df.head()"
    ]
   },
