--- a/CM/CM4/03-Text-Classification-Assessment.ipynb
+++ b/CM/CM4/03-Text-Classification-Assessment.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "4   neg  my first press screening of 1998 and already i..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/TextFiles/moviereviews.tsv', sep='\\t')\n",
+    "df = pd.read_csv('../../data/TextFiles/moviereviews.tsv', sep='\\t')\n",
     "df.head()"
    ]
   },
