add the rest of the TP

--- a/TP/TP-25-01/preprocessing.ipynb
+++ b/TP/TP-25-01/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "(7613, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "max    10873.000000     1.00000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -432,11 +432,11 @@
       "\n",
       "Quelques tweets au hasard :\n",
       "           keyword                                               text  target\n",
-      "1388  bush%20fires  So apparently there were bush fires near where...       1\n",
-      "3349     evacuated  @115Film Doctor we must leave immediately the ...       1\n",
-      "3497     explosion  #Tampa: Super Freestyle Explosion Live in Conc...       0\n",
-      "4352        hijack  Bayelsa poll: Tension in Bayelsa as Patience J...       0\n",
-      "4359      hijacker  Remove the http://t.co/Xxj2B4JxRt and Linkury ...       0\n"
+      "2572       destroy  @MsMigot wow what convincing &amp; compelling ...       0\n",
+      "4330        hijack  Criminals Who Hijack Lorries And Buses Arreste...       1\n",
+      "5691       rescued  We rescued my dog at least 9 years ago ?? she'...       0\n",
+      "3795  fire%20truck  #SigAlert: North &amp; Southbound 133 closed b...       1\n",
+      "1985        damage  I liked a @YouTube video http://t.co/tBX8cAKdr...       0\n"
      ]
     }
    ],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
